--- a/My Application/app/src/main/res/layout/activity_splash.xml
+++ b/My Application/app/src/main/res/layout/activity_splash.xml
@@ -4,19 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Splash"
-    android:background="#FFFFFF">
+    android:background="@color/white"
+    android:gravity="center"
+    >
 
 
-    android:
-    <TextView
-        android:id="@+id/splashText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:
-        android:text="@string/forgot_password"
-        android:textColor="#2196F3"
-        android:layout_marginBottom="30dp" />
+        <TextView
+            android:id="@+id/splashText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="welcome to jee-64"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="32dp" />
+
+
 
 
 
