--- a/My Application/app/src/main/res/layout/activity_splash.xml
+++ b/My Application/app/src/main/res/layout/activity_splash.xml
@@ -7,13 +7,19 @@
     android:background="@color/white"
     android:gravity="center"
     >
-
+<ImageView
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:id="@+id/logo"
+    android:src="@drawable/ex"
+    android:contentDescription="App Logo"
+    android:layout_marginBottom="24dp" />
 
         <TextView
             android:id="@+id/splashText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="welcome to jee-64"
+            android:text="Android Application Development"
             android:textSize="24sp"
             android:textStyle="bold"
             android:textColor="#000000"
