--- a/AndroidBook/app/src/main/res/layout/activity_home.xml
+++ b/AndroidBook/app/src/main/res/layout/activity_home.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".Home">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Home"
+
+        android:textSize="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
