--- a/AndroidBook/app/src/main/res/layout/activity_home.xml
+++ b/AndroidBook/app/src/main/res/layout/activity_home.xml
@@ -1,21 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="24dp"
+    android:gravity="center"
     tools:context=".Home">
 
+
+    <!-- Book Cover or Logo -->
+    <ImageView
+        android:id="@+id/bookCover"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:src="@drawable/ll"
+        android:contentDescription="Book Cover" />
+
+    <!-- Title -->
     <TextView
+        android:id="@+id/bookTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
+        android:text="Android Learning Basic"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_below="@id/bookCover"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textColor="#000000" />
 
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- Welcome Message -->
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome! Start learning Android step by step."
+        android:textSize="16sp"
+        android:layout_below="@id/bookTitle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="#555555" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Start Reading Button -->
+    <Button
+        android:id="@+id/contentsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start Reading"
+        android:layout_below="@id/welcomeText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:backgroundTint="#4CAF50"
+        android:textColor="#FFFFFF" />
+
+
+
+
+
+
+
+
+</RelativeLayout>
