--- a/AndroidBook/app/src/main/res/layout/activity_splash.xml
+++ b/AndroidBook/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/ccc"
         android:contentDescription="App Logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
