--- a/AndroidBook/app/src/main/res/layout/activity_contents.xml
+++ b/AndroidBook/app/src/main/res/layout/activity_contents.xml
@@ -6,34 +6,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".Contents">
+    tools:context=".Contents"
+    android:orientation="vertical"
+    android:background="#0000"
 
 
 
+
+
+
+
+
+
+
+    >
 
 
         <TextView
             android:id="@+id/contentsTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contents"
-
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="#000000"
+            android:layout_width="378dp"
+            android:layout_height="40dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp" />
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="Contents"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <ListView
             android:id="@+id/chapterList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="520dp"
             android:layout_below="@id/contentsTitle"
-            android:layout_marginTop="50dp"
+
+            android:layout_marginTop="0dp"
+            android:layout_weight="1"
             android:divider="#CCCCCC"
             android:dividerHeight="1dp" />
-
-
 
 
 </LinearLayout>
