--- a/AndroidBook/app/src/main/res/layout/activity_contents.xml
+++ b/AndroidBook/app/src/main/res/layout/activity_contents.xml
@@ -8,18 +8,7 @@
     android:padding="16dp"
     tools:context=".Contents"
     android:orientation="vertical"
-    android:background="#0000"
-
-
-
-
-
-
-
-
-
-
-    >
+    android:background="#0000">
 
 
         <TextView
